# shlex

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
brain/: context_engine.py  prompt_generator.py  task_planner.py
core/: database.py  event_bus.py  models.py
docs/plans/: 2026-03-03-coding-automation-loop-design.md  2026-03-03-coding-automation-loop-plan.md
execution/: decision_engine.py  multi_agent.py  output_parser.py  session_manager.py  tmux_controller.py
input/: cli.py  telegram_bot.py  voice_processor.py
monitoring/: dashboard.py  event_logger.py  telegram_reporter.py
monitoring/templates/: index.html
tests/: test_context_engine.py  test_dashboard.py  test_database.py  test_decision_engine.py  test_event_bus.py  test_integration.py  test_main.py  test_models.py  test_multi_agent.py  test_output_parser.py  test_prompt_generator.py  test_session_manager.py  test_task_planner.py  test_telegram_bot.py  test_telegram_reporter.py  test_tmux_controller.py  test_voice_processor.py
