[project]
name = "coding-automation-loop"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "libtmux>=0.37.0",
    "python-telegram-bot[webhooks]>=21.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["core*", "input*", "brain*", "execution*", "monitoring*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
